--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Jacob Smith
-url: http://systemist.org
+url: http://smithjs.org
 
 owner:
   name: Jacob Smith
-  email: jacob@jacobsmith.io
+  email: jacob@smithjs.org
 
 theme:
 
